  Printer.pr_var_decl            -> Printer.pr_named_decl

We removed the following functions:

  Termops.Termops.compact_named_context_reverse

We renamed the following modules:

  Context.ListNamed -> Context.Compacted

The following type aliases where removed

  Context.section_context    ... it was just an alias for "Context.Named.t" which is still available

** Ltac API **

Many Ltac specific API has been moved in its own ltac/ folder. Amongst other
important things:

- Pcoq.Tactic -> Pltac
- Constrarg.wit_tactic -> Tacarg.wit_tactic
- Constrarg.wit_ltac -> Tacarg.wit_ltac
- API below ltac/ that accepted a *_tactic_expr now accept a *_generic_argument
  instead
- Some printing functions were moved from Pptactic to Pputils
- A part of Tacexpr has been moved to Tactypes

** Error handling **

- All error functions now take an optional parameter `?loc:Loc.t`. For
  functions that used to carry a suffix `_loc`, such suffix has been
  dropped.

- `errorlabstrm` has been removed in favor of `user_err`.

- The header parameter to `user_err` has been made optional.

=========================================
= CHANGES BETWEEN COQ V8.5 AND COQ V8.6 =
=========================================

** Files **

To avoid clashes with OCaml's compiler libs, the following files were renamed:
kernel/closure.ml{,i} -> kernel/cClosure.ml{,i}
lib/errors.ml{,i} -> lib/cErrors.ml{,i}
toplevel/cerror.ml{,i} -> toplevel/explainErr.mli{,i}

** Reduction functions **

In closure.ml, we introduced the more precise reduction flags fMATCH, fFIX,
fCOFIX.

We renamed the following functions:

Closure.betadeltaiota -> Closure.all
Closure.betadeltaiotanolet -> Closure.allnolet
Reductionops.beta -> Closure.beta
Reductionops.zeta -> Closure.zeta
Reductionops.betaiota -> Closure.betaiota
Reductionops.betaiotazeta -> Closure.betaiotazeta
Reductionops.delta -> Closure.delta
Reductionops.betalet -> Closure.betazeta
Reductionops.betadelta -> Closure.betadeltazeta