@@ -21,7 +21,6 @@ open Tacmach
 open Tacticals
 open Rewrite
 open Stdarg
-open Constrarg
 open Pcoq.Vernac_
 open Pcoq.Prim
 open Pcoq.Constr
