@@ -31,7 +31,6 @@ open Tacexpr
 open Genarg
 open Geninterp
 open Stdarg
-open Constrarg
 open Tacarg
 open Printer
 open Pretyping
