@@ -19,7 +19,7 @@ DECLARE PLUGIN "omega_plugin"
 
 open Names
 open Coq_omega
-open Constrarg
+open Stdarg
 
 let eval_tactic name =
   let dp = DirPath.make (List.map Id.of_string ["PreOmega"; "omega"; "Coq"]) in
