@@ -13,7 +13,7 @@ open Misctypes
 open Tacexpr
 open Geninterp
 open Quote
-open Constrarg
+open Stdarg
 open Tacarg
 
 DECLARE PLUGIN "quote_plugin"
