@@ -145,7 +145,7 @@ let conclPattern concl pat tac =
        constr_bindings env sigma >>= fun constr_bindings ->
      let open Genarg in
      let open Geninterp in
-     let inj c = match val_tag (topwit Constrarg.wit_constr) with
+     let inj c = match val_tag (topwit Stdarg.wit_constr) with
      | Val.Base tag -> Val.Dyn (tag, c)
      | _ -> assert false
      in
